GNOME Bugzilla – Bug 702495
sdpdemux fails if not explicitly added to the pipeline
Last modified: 2018-11-03 13:15:47 UTC
Created attachment 247054 [details] sdp file Steps to reproduce: 1. Create a send-pipeline with gst-launch-1.0 videotestsrc ! x264enc ! h264parse ! rtph264pay ! udpsink host=127.0.0.1 port=5000 2. With the attached sdp-file launch this pipeline: gst-launch-1.0 -v filesrc location=stream.sdp ! decodebin ! autovideosink This won't show any video. Same pipeline works with GStreamer 0.10. Now lets add the a sdpdemux element to the pipeline: gst-launch-1.0 -v filesrc location=stream.sdp ! sdpdemux ! decodebin ! autovideosink Result: A Video is shown. But for some reason with the original pipeline its not.
I can confirm this, also with latest git master.
It is a known problem I have no fix for... The reason is that the live element is added dynamically to the pipeline and there is nothing in GStreamer to signal the pipeline that it should not wait for PREROLL but go to PLAYING right away.
It's not entirely clear to me why this worked in 0.10 then - were there any changes in this area?
In 0.10, in pull mode, typefind pulled from the source during the ready->paused transition, which caused decodebin2 to add sdpdemux, so it's there by the time the decodebin2 bin tries to go to paused and NO_PREROLL gets propagated. Using pushfile:// in 0.10 also causes it to fail.
The solution might be to add a no-preroll GstMessage to unlock the parent bin ? And I guess this isn't 1.2 material so we shoudl probably rank sdpdemux back to 0 in the meantime.
commit f33a73b35950cd3dc53efd1b4fa316935836ab8e Author: Sebastian Dröge <slomo@circular-chaos.org> Date: Mon Sep 23 16:18:43 2013 +0200 sdpdemux: Change rank to NONE until it can be autoplugged properly https://bugzilla.gnome.org/show_bug.cgi?id=702495
Not a blocker anymore then
Hm, a lot of this is implemented in rtpsrc/rtpsink; I'll see if I can adjust it to use those and add it in the relevant bug.
hi, problem is still present no correction available ?
No solution implemented yet, needs someone for which this is a big enough problem to work on it :)
See https://bugzilla.gnome.org/show_bug.cgi?id=762860 for a workaround (plus some additional functionality).
Shall we close since there are alternatives now ?
-- GitLab Migration Automatic Message -- This bug has been migrated to freedesktop.org's GitLab instance and has been closed from further activity. You can subscribe and participate further through the new bug through this link to our GitLab instance: https://gitlab.freedesktop.org/gstreamer/gst-plugins-bad/issues/96.