sdpdemux: Change rank to NONE until it can be autoplugged properly

https://bugzilla.gnome.org/show_bug.cgi?id=702495